feat: redesign portfolio and add RestroFlow project
- New editorial theme (cream/ink/flame colors)
- Add RestroFlow POS to projects, remove Task Manager
- Update skills section (tags instead of percentages)
- Fix Timeline animations
- Add EmailJS to Contact form
- Add profile photo and RestroFlow screenshot
- Remove PersonalityQuiz and RobotCompanion components

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Hein Htet Soe</h1>
-            <p>Creative Developer | Designer | Freelancer</p>
+            <p>Full Stack Developer | AI Automation | Web Applications</p>
             <a href="#portfolio" class="cta-button">View My Work</a>
         </div>
     </section>
